# astra_nexus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
MagicMock/mock.data_dir/139650649765792/debug/nodriver/requested_files/manual/: artifact_detector_debug.json  requested_file_download_result.json  requested_file_request.json
docs/: AGENTS.md  AI_TEAM.md  ARCHITECTURE.md  BRAND.md  MVP_PLAN.md  NODRIVER.md  NODRIVER_SMOKE_TEST.md  ROADMAP.md  SECURITY.md  TASK_FLOW.md  TELEGRAM_LIVE_TEST.md
src/astra_nexus/: __init__.py  bootstrap.py  main.py
src/astra_nexus/agents/: __init__.py  base.py  registry.py
src/astra_nexus/agents/roles/: __init__.py  coordinator.py  critic.py  finalizer.py  researcher.py  writer.py
src/astra_nexus/api/: __init__.py  app.py
src/astra_nexus/api/routes/: __init__.py  agents.py  brain.py  health.py  tasks.py
src/astra_nexus/brain/: __init__.py  base.py  dummy_provider.py  factory.py  nodriver_provider.py
src/astra_nexus/brain/nodriver/: __init__.py  artifact_detector.py  artifact_test.py  artifact_uploader.py  ask.py  browser_session.py  chatgpt_client.py  clean.py  diagnose.py  doctor.py  dom_probe.py  download_manager.py  dump_artifacts.py  dump_last_turn.py  evaluate.py  exceptions.py  health.py  insert_probe.py  lifecycle.py  login.py  response_parser.py  selectors.py  smoke.py  turn_probe.py  windowing.py
src/astra_nexus/config/: settings.py
src/astra_nexus/core/: __init__.py  events.py  orchestrator.py  task_state.py  workspace.py
src/astra_nexus/db/: __init__.py  models.py  session.py
src/astra_nexus/db/repositories/: __init__.py  agents.py  messages.py  tasks.py
src/astra_nexus/services/: __init__.py  agent_service.py  message_service.py  task_service.py
src/astra_nexus/team/: __init__.py  agent_chats_preview.py  artifacts.py  artifacts_preview.py  ask.py  atmosphere.py  atmosphere_preview.py  attachments.py  chat_preview.py  chat_sessions.py  diagnostics.py  dialogue.py  dialogue_preview.py  execution_plan.py  fake_provider.py  file_preview.py  intake.py  intake_preview.py  jobs.py  messages.py  models.py  nodriver_provider.py  orchestrator.py  parallel_preview.py  profiles.py  prompting.py  provider.py  requested_file_preview.py  resume.py  review_preview.py  review_protocol.py  run_registry.py  runtime.py  runtime_preview.py  smoke.py  telegram_bridge.py  telegram_render.py  telegram_render_preview.py  workspace.py
src/astra_nexus/telegram/: __init__.py  bot.py  notifier.py  run_bot.py  task_runner.py
src/astra_nexus/telegram/handlers/: __init__.py  agents.py  cancel.py  start.py  status.py  tasks.py
src/astra_nexus/telegram/presenters/: __init__.py  agent_messages.py  task_cards.py
src/astra_nexus/utils/: __init__.py  ids.py
tests/: test_agent_registry.py  test_artifact_input_flow.py  test_brain_factory.py  test_brain_health_api.py  test_nodriver_artifact_detector.py  test_nodriver_artifact_uploader.py  test_nodriver_ask_cli.py  test_nodriver_browser_session.py  test_nodriver_doctor.py  test_nodriver_dom_probe.py  test_nodriver_download_manager.py  test_nodriver_evaluate.py  test_nodriver_insert_probe.py  test_nodriver_lifecycle.py  test_nodriver_login_smoke_cli.py  test_nodriver_prompt_insert.py  test_nodriver_provider.py  test_nodriver_requested_file_flow.py  test_nodriver_response_wait.py  test_nodriver_settings.py  test_services.py  test_task_flow.py  test_team_artifacts.py  test_team_ask_cli.py  test_team_atmosphere.py  test_team_attachments.py  test_team_chat_sessions.py  test_team_diagnostics.py  test_team_dialogue.py  test_team_execution_plan.py  test_team_file_preview.py  test_team_intake.py  test_team_jobs.py  test_team_messages.py  test_team_nodriver_provider.py  test_team_orchestrator.py  test_team_prompting.py  test_team_reliability.py  test_team_resume.py  test_team_review_protocol.py  (+10 more)
