[project]
name = "astra-nexus"
version = "0.1.0"
description = "Личный командный центр AI-агентов в Telegram."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4.0",
    "alembic>=1.13,<2.0",
    "fastapi>=0.110,<1.0",
    "nodriver>=0.46,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.scripts]
astra-nexus-api = "astra_nexus.main:run_api"
astra-nexus-bot = "astra_nexus.telegram.run_bot:main"
astra-nexus-nodriver-ask = "astra_nexus.brain.nodriver.ask:main"
astra-nexus-nodriver-clean = "astra_nexus.brain.nodriver.clean:main"
astra-nexus-nodriver-diagnose = "astra_nexus.brain.nodriver.diagnose:main"
astra-nexus-nodriver-dom-probe = "astra_nexus.brain.nodriver.dom_probe:main"
astra-nexus-nodriver-insert-probe = "astra_nexus.brain.nodriver.insert_probe:main"
astra-nexus-nodriver-login = "astra_nexus.brain.nodriver.login:main"
astra-nexus-nodriver-smoke = "astra_nexus.brain.nodriver.smoke:main"
astra-nexus-team-ask = "astra_nexus.team.ask:main"
astra-nexus-team-chat-preview = "astra_nexus.team.chat_preview:main"
astra-nexus-team-resume = "astra_nexus.team.resume:main"
astra-nexus-team-smoke = "astra_nexus.team.smoke:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astra_nexus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
