[project]
name = "astra-nexus"
version = "0.1.0"
description = "Личный командный центр AI-агентов в Telegram."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4.0",
    "alembic>=1.13,<2.0",
    "fastapi>=0.110,<1.0",
    "nodriver>=0.46,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "pypdf>=4.0,<7.0",
    "python-docx>=1.1,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.scripts]
astra-nexus-api = "astra_nexus.main:run_api"
astra-nexus-bot = "astra_nexus.telegram.run_bot:main"
astra-nexus-nodriver-ask = "astra_nexus.brain.nodriver.ask:main"
astra-nexus-nodriver-clean = "astra_nexus.brain.nodriver.clean:main"
astra-nexus-nodriver-diagnose = "astra_nexus.brain.nodriver.diagnose:main"
astra-nexus-nodriver-dom-probe = "astra_nexus.brain.nodriver.dom_probe:main"
astra-nexus-nodriver-insert-probe = "astra_nexus.brain.nodriver.insert_probe:main"
astra-nexus-nodriver-login = "astra_nexus.brain.nodriver.login:main"
astra-nexus-nodriver-smoke = "astra_nexus.brain.nodriver.smoke:main"
astra-nexus-team-ask = "astra_nexus.team.ask:main"
astra-nexus-team-artifacts-preview = "astra_nexus.team.artifacts_preview:main"
astra-nexus-team-atmosphere-preview = "astra_nexus.team.atmosphere_preview:main"
astra-nexus-team-chat-preview = "astra_nexus.team.chat_preview:main"
astra-nexus-team-dialogue-preview = "astra_nexus.team.dialogue_preview:main"
astra-nexus-team-file-preview = "astra_nexus.team.file_preview:main"
astra-nexus-team-intake-preview = "astra_nexus.team.intake_preview:main"
astra-nexus-team-mvp-check = "astra_nexus.team.diagnostics:main"
astra-nexus-team-parallel-preview = "astra_nexus.team.parallel_preview:main"
astra-nexus-team-review-preview = "astra_nexus.team.review_preview:main"
astra-nexus-team-resume = "astra_nexus.team.resume:main"
astra-nexus-team-runtime-preview = "astra_nexus.team.runtime_preview:main"
astra-nexus-team-runs-preview = "astra_nexus.team.run_registry:main"
astra-nexus-team-smoke = "astra_nexus.team.smoke:main"
astra-nexus-team-telegram-bot = "astra_nexus.team.telegram_bridge:main_bot"
astra-nexus-team-telegram-job-preview = "astra_nexus.team.telegram_bridge:main_job_preview"
astra-nexus-team-telegram-live-preview = "astra_nexus.team.telegram_bridge:main_live_preview"
astra-nexus-team-telegram-preview = "astra_nexus.team.telegram_bridge:main_preview"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astra_nexus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
